Fix: Bug du calcul de durée pour les stationnements >24h